--- a/src/BusinessLogic/Resources/LocationPicker/css/locationPicker.css
+++ b/src/BusinessLogic/Resources/LocationPicker/css/locationPicker.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 750px) {
+@media screen and (max-width: 800px) {
     .lp-collapse {
         display: none !important;
     }
@@ -6,6 +6,10 @@
     .lp-expand {
         display: block !important;
         flex-grow: 1;
+    }
+
+    .lp-input-wrapper > .input > .label {
+        font-size: 12px !important;
     }
 }
 
@@ -39,7 +43,11 @@
     cursor: pointer;
     display: inline-block;
     margin-right: 25px;
-    padding: 0 20px;
+    padding: 0 10px;
+}
+
+.composite .lp-select-button {
+    margin-right: 10px;
 }
 
 .lp-select-button:hover {
@@ -122,7 +130,7 @@
 }
 
 .lp-input-wrapper > .input > .label {
-    max-width: 95%;
+    max-width: calc(100% - 30px);
     line-height: 16px;
     position: absolute;
     top: 16px;
@@ -156,7 +164,7 @@
     border: 1px solid transparent;
     border-bottom: 1px solid #dcdcdc;
     display: flex;
-    padding: 0 0 0 20px;
+    padding: 0 15px;
     cursor: pointer;
 }
 
@@ -184,9 +192,10 @@
 .lp-location-wrapper > .composite {
     display: none;
     line-height: 20px;
-    margin-top: 16px;
     white-space: normal;
     overflow: visible;
+    margin: 16px 10px 10px 0;
+    width: 100%;
 }
 
 .lp-location-wrapper > * {
@@ -199,6 +208,7 @@
 
 .lp-location-wrapper > .radio-button {
     margin-right: 20px;
+    width: 20px;
 }
 
 .lp-location-wrapper > .name {
