--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -2,53 +2,30 @@
     font-weight: 700;
     font-family: pl-proxima-nova;
     font-style: normal;
-    src: url(https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-BoldWeb.woff) format("woff")
+    src: url("https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-BoldWeb.woff") format("woff")
 }
 
 @font-face {
     font-weight: 600;
     font-family: pl-proxima-nova;
     font-style: normal;
-    src: url(https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-SemiboldWeb.woff) format("woff")
+    src: url("https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-SemiboldWeb.woff") format("woff")
 }
 
 @font-face {
     font-weight: 400;
     font-family: pl-proxima-nova;
     font-style: normal;
-    src: url(https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-RegularWeb.woff) format("woff")
+    src: url("https://cdn.packlink.com/apps/giger/fonts/ProximaNova/ProximaNova-RegularWeb.woff") format("woff")
 }
-
-/* color and style guide
- *************************
- COLORS:
-   primary-blue: #2195f2;
-   login-footer: #2e4265;
-   borders:
-     gray-border: #e9eae8
-     gray-border-light: #d7d7d7
-     gray-border-control: #f5f5f5
-   font:
-     regular-text: #3a3d46
-     page-title: #5d5d5d
-     section-title: #5e6972
-     control-label: #9b9b9b
-     input-text: #191919
-     primary-button: #ffffff
-     disabled-button: control-label
-     white-button: login-footer
-     link: #57b3f8
-
-   button:
-     primary-back: primary-blue
-     disabled-back: #e1e1e1
- */
 
 /* CSS reset */
 /* We do not reset the html and body, since we need to reset only for the app's root element #pl-page */
 #pl-page {
     display: flex;
     flex-direction: column;
+    background-color: white;
+    height: 100%;
 }
 
 #pl-page template {
@@ -58,8 +35,11 @@
 #pl-page * {
     margin: 0;
     padding: 0;
-    font-family: pl-proxima-nova sans-serif;
-    font-size: 100%;
+    font-family: pl-proxima-nova, sans-serif;
+    font-size: 16px;
+    line-height: 16px;
+    font-weight: 400;
+    font-style: normal;
     vertical-align: baseline;
     color: #3a3d46;
 }
@@ -69,8 +49,14 @@
 }
 
 #pl-page h1, #pl-page h2, #pl-page h3, #pl-page h4, #pl-page h5, #pl-page h6 {
-    font-size: 100%;
-    font-weight: normal
+    color: #5E6972;
+    font-weight: bold;
+}
+
+#pl-page h1 {
+    line-height: 22px;
+    font-size: 22px;
+    margin-bottom: 16px;
 }
 
 #pl-page ul, #pl-page ol {
@@ -80,6 +66,11 @@
 #pl-page img {
     height: auto;
     max-width: 100%
+}
+
+#pl-page strong {
+    font-weight: 700;
+    font-style: normal;
 }
 
 #pl-page table {
@@ -101,18 +92,170 @@
 }
 
 #pl-page > header {
-    border-bottom: 2px solid #e9eae8;
-    padding: 10px;
+    border-bottom: 1px solid #e9eae8;
+    padding: 20px;
     display: flex;
     align-items: center;
 }
 
 #pl-page > main {
+    display: flex;
     flex-grow: 1;
 }
 
-#pl-page .pl-sub-header {
+#pl-page div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
+/* utility classes */
+#pl-page .pl-inline {
+    display: inline;
+}
+
+#pl-page .pl-text-center {
+    text-align: center;
+}
+
+#pl-page .pl-flex-expand {
+    flex-grow: 1;
+}
+
+#pl-page .pl-flex-left {
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+
+#pl-page .pl-full-width {
+    width: 100%;
+}
+
+#pl-page .pl-bottom-separate {
+    margin-bottom: 36px;
+}
+
+/* control classes */
+#pl-page .pl-button {
+    overflow: visible;
+    display: inline-flex;
+    padding: 16px;
+    vertical-align: middle;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    cursor: pointer;
+    color: #2095f2;
+    font-style: normal;
+    font-weight: 600;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: none;
+    text-transform: uppercase;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: none;
+    transition: background .4s, border-color .4s, color .4s;
+    align-items: center;
+    justify-content: center;
+    margin: 10px 0 0;
+    height: auto;
+    width: 170px;
+}
+
+#pl-page .pl-button.pl-button-primary {
+    background-color: #2195F2;
+    color: #fff;
+}
+
+#pl-page .pl-button.pl-button-inverted {
+    background-color: #ffffff;
+    color: #2E4265;
+}
+
+#pl-page .pl-button:hover {
+    color: #fff;
+    background: rgba(32, 149, 242, .7);
+    box-shadow: none;
+}
+
+#pl-page .pl-button:disabled {
+    color: #9B9B9B;
+    background-color: #E1E1E1;
+    pointer-events: none;
+}
+
+#pl-page .pl-form-group {
+    position: relative;
+    border: none;
+    width: 100%;
+}
+
+#pl-page .pl-form-group input {
+    height: 50px;
+    background-color: white;
+    border-radius: 0;
+    border: 1px solid #dcdcdc;
+    padding: 20px 0 0 15px;
+    color: #5d5d5d;
+    width: 100%;
+    margin: 0;
+    box-shadow: unset;
+}
+
+#pl-page .pl-form-group input:focus {
+    border: 1px solid #2095F2 !important;
+}
+
+#pl-page .pl-form-group label {
+    position: absolute;
+    top: 8px;
+    left: 16px;
+    color: #9B9B9B;
+    text-transform: uppercase;
+    font-size: 12px;
+}
+
+
+#pl-page .pl-form-group select {
+    height: 50px;
+    line-height: 50px;
+    padding: 0 0 0 15px;
+    background-color: white;
+    color: #5d5d5d;
+    font-size: 12px;
+    width: 100%;
+}
+
+#pl-page .pl-alert {
+    position: relative;
+    padding: .75rem 1.25rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem;
+}
+
+#pl-page .pl-alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+#pl-page.pl-alert-success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+}
+
+/* specific classes */
+#pl-page .pl-login-footer {
+    padding: 20px;
+    background-color: #2E4265;
+    color: #ffffff;
+}
+
+#pl-page .pl-login-footer * {
+    color: #ffffff;
 }
 
 /* mobile rules */
