--- a/src/BusinessLogic/Resources/templates/login.html
+++ b/src/BusinessLogic/Resources/templates/login.html
@@ -1,43 +1,43 @@
-<div class="pl-login-page">
-    <div class="pl-login-page-content-wrapper">
-        <div class="pl-login-form-header">
-            <div class="pl-login-form-title-wrapper">
+<div class="pl-login-page pl-flex-expand">
+    <div class="pl-flex-expand pl-text-center">
+        <div class="pl-bottom-separate">
+            <h1 class="pl-text-center">
                 {$login.welcome}
-            </div>
-            <div class="pl-login-form-text-wrapper">
+            </h1>
+            <p class="pl-text-center">
                 {$login.connectYourService}
-            </div>
+            </p>
         </div>
-        <p class="pl-login-error-msg" id="pl-login-error-msg">
-            {$login.apiKeyIncorrect}
-        </p>
-        <form method="POST" name="plLoginForm" id="pl-login-form">
-            <div class="pl-login-form-wrapper">
-                <div class="form-group pl-form-section-input pl-text-input">
-                    <label for="pl-login-api-key" class="pl-text-input-label" id="pl-login-api-key-label">
+        <form method="POST" name="plLoginForm" id="pl-login-form" class="pl-full-width">
+            <div>
+                <div class="pl-form-group">
+                    <label for="pl-login-api-key">
                         {$login.apiKey}
                     </label>
-                    <input type="text" class="form-control" id="pl-login-api-key" name="apiKey" required/>
+                    <input type="text" id="pl-login-api-key" name="apiKey" required placeholder="abcdefgh12345676789"/>
                 </div>
             </div>
             <div>
-                <button type="submit" name="login" class="button button-primary button-login">
+                <button type="submit" name="login" class="pl-button pl-button-primary">
                     {$login.validateApiKey}
                 </button>
             </div>
+            <p class="pl-alert pl-alert-danger" id="pl-login-error-msg">
+                {$login.apiKeyIncorrect}
+            </p>
         </form>
-        <div class="pl-register-button-wrapper">
-            <div class="">
-                {$login.dontHaveAccount}
-            </div>
-            <div class="">
-                {$login.chooseYourCountry}
-            </div>
-            <div>
-                <button type="submit" name="register" class="button button-primary button-register">
-                    {$login.registerMe}
-                </button>
-            </div>
+    </div>
+    <div class="pl-full-width pl-login-footer">
+        <div>
+            <strong>{$login.dontHaveAccount}</strong>
+        </div>
+        <div>
+            {$login.chooseYourCountry}
+        </div>
+        <div>
+            <button type="submit" name="register" class="pl-button pl-button-inverted">
+                {$login.registerMe}
+            </button>
         </div>
     </div>
 </div>
