--- a/src/BusinessLogic/Resources/templates/login.html
+++ b/src/BusinessLogic/Resources/templates/login.html
@@ -1,5 +1,5 @@
 <div class="pl-login-page pl-flex-expand">
-    <div class="pl-flex-expand pl-text-center">
+    <div class="pl-flex-expand pl-text-center pl-page-padding">
         <div class="pl-bottom-separate">
             <h1 class="pl-text-center">
                 {$login.welcome}
@@ -9,29 +9,29 @@
             </p>
         </div>
         <form method="POST" name="plLoginForm" id="pl-login-form" class="pl-full-width">
+            <p class="pl-alert pl-alert-danger pl-hidden" id="pl-login-error-msg">
+                {$login.apiKeyIncorrect}
+            </p>
             <div>
                 <div class="pl-form-group">
                     <label for="pl-login-api-key">
                         {$login.apiKey}
                     </label>
-                    <input type="text" id="pl-login-api-key" name="apiKey" required placeholder="abcdefgh12345676789"/>
+                    <input type="text" id="pl-login-api-key" name="apiKey" placeholder="abcdefgh12345676789"/>
                 </div>
             </div>
             <div>
-                <button type="submit" name="login" class="pl-button pl-button-primary">
+                <button id="pl-login-button" type="submit" name="login" class="pl-button pl-button-primary" disabled>
                     {$login.validateApiKey}
                 </button>
             </div>
-            <p class="pl-alert pl-alert-danger" id="pl-login-error-msg">
-                {$login.apiKeyIncorrect}
-            </p>
         </form>
     </div>
-    <div class="pl-full-width pl-login-footer">
+    <div class="pl-full-width pl-login-footer pl-page-padding">
         <div>
             <strong>{$login.dontHaveAccount}</strong>
         </div>
-        <div>
+        <div class="pl-desktop-only">
             {$login.chooseYourCountry}
         </div>
         <div>
