--- a/src/BusinessLogic/Resources/css/app.css
+++ b/src/BusinessLogic/Resources/css/app.css
@@ -36,7 +36,7 @@
     margin: 0;
     padding: 0;
     font-family: pl-proxima-nova, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 16px;
     font-weight: 400;
     font-style: normal;
@@ -200,19 +200,19 @@
 }
 
 #pl-page .pl-form-group input {
-    height: 50px;
     background-color: white;
     border-radius: 0;
     border: 1px solid #dcdcdc;
-    padding: 20px 0 0 15px;
+    padding: 21px 16px 13px;
     color: #5d5d5d;
     width: 100%;
     margin: 0;
     box-shadow: unset;
+    line-height: 22px;
 }
 
 #pl-page .pl-form-group input:focus {
-    border: 1px solid #2095F2 !important;
+    border: 1px solid #2095F2;
 }
 
 #pl-page .pl-form-group label {
