--- a/src/BusinessLogic/Resources/templates/login.html
+++ b/src/BusinessLogic/Resources/templates/login.html
@@ -35,7 +35,7 @@
             {$login.chooseYourCountry}
         </div>
         <div>
-            <button type="submit" name="register" class="pl-button pl-button-inverted">
+            <button type="submit" name="register" class="pl-button pl-button-inverted" id="pl-go-to-register">
                 {$login.registerMe}
             </button>
         </div>
