Fix compiling SCSS to respect imports

--- a/src/BusinessLogic/Resources/scss/app.scss
+++ b/src/BusinessLogic/Resources/scss/app.scss
@@ -1,3 +1,8 @@
+@import "reset";
+@import "animations";
+@import "utility";
+@import "ui-controls";
+
 #pl-page {
   .pl-onboarding-overview-list {
     width: 100%;
