--- a/src/BusinessLogic/Resources/templates/register.html
+++ b/src/BusinessLogic/Resources/templates/register.html
@@ -16,7 +16,7 @@
                     </label>
                     <input id="pl-register-email" type="email" class="form-control" name="email" required />
                 </div>
-                <div class="pl-form-group">
+                <div class="pl-form-group pl-bottom-separate">
                     <label for="pl-register-password">
                         {$register.password}
                     </label>
@@ -25,9 +25,9 @@
                            class="form-control"
                            name="password"
                            minlength="6"
-                           required />
+                           required/>
                 </div>
-                <p class="pl-text-center pl-text-with-margins">
+                <p class="pl-text-center">
                     {$register.getToKnowYou}
                 </p>
                 <div class="pl-form-group" id="pl-register-delivery-volume">
