--- a/src/BusinessLogic/Resources/scss/ui-controls.scss
+++ b/src/BusinessLogic/Resources/scss/ui-controls.scss
@@ -1,6 +1,6 @@
 #pl-page {
   > header {
-    border-bottom: 1px solid #e9eae8;
+    border-bottom: 1px solid $border-color;
     padding: 20px;
     display: flex;
     align-items: center;
@@ -19,7 +19,7 @@
     -webkit-appearance: none;
     -moz-appearance: none;
     cursor: pointer;
-    color: #2095f2;
+    color: $color-blue;
     font-style: normal;
     font-weight: 600;
     text-align: center;
@@ -37,17 +37,17 @@
     width: 170px;
 
     &.pl-button-primary {
-      background-color: #2195F2;
-      color: #fff;
+      background-color: $color-blue;
+      color: $color-white;
     }
 
     &.pl-button-secondary {
-      border: 1px solid #2095f2;
-      background-color: white;
+      border: 1px solid $color-blue;
+      background-color: $color-white;
 
       &:hover {
-        color: rgba(32, 149, 242, .7);
-        border: 1px solid rgba(32, 149, 242, .7);
+        color: $color-blue-darker;
+        border: 1px solid $color-blue-darker;
       }
     }
 
@@ -58,19 +58,19 @@
     }
 
     &.pl-button-inverted {
-      background-color: #ffffff;
-      color: #2E4265;
+      background-color: $color-white;
+      color: $color-navy-dark;
     }
 
     &:hover {
-      color: #fff;
-      background: rgba(32, 149, 242, .7);
+      color: $color-white;
+      background: $color-blue-darker;
       box-shadow: none;
     }
 
     &:disabled {
-      color: #9B9B9B;
-      background-color: #E1E1E1;
+      color: $color-gray;
+      background-color: $color-light;
       pointer-events: none;
     }
   }
@@ -79,24 +79,25 @@
     position: relative;
     border: none;
     width: 100%;
+    align-items: start;
 
     &:not(:first-child) {
       margin-top: 15px;
     }
 
     input {
-      background-color: white;
+      background-color: $color-white;
       border-radius: 0;
-      border: 1px solid #dcdcdc;
+      border: 1px solid $border-color;
       padding: 21px 16px 13px;
-      color: #5d5d5d;
+      color: $input-control-color;
       width: 100%;
       margin: 0;
       box-shadow: unset;
       line-height: 22px;
 
       &:focus {
-        border: 1px solid #2095F2;
+        border: 1px solid $color-blue;
       }
     }
 
@@ -104,17 +105,18 @@
       position: absolute;
       top: 8px;
       left: 16px;
-      color: #9B9B9B;
+      color: $color-gray;
       text-transform: uppercase;
       font-size: 12px;
     }
 
     select {
       height: 50px;
+      border: 1px solid $border-color;
       line-height: 50px;
       padding: 0 0 0 15px;
-      background-color: white;
-      color: #5d5d5d;
+      background-color: $color-white;
+      color: $input-control-color;
       font-size: 12px;
       width: 100%;
     }
@@ -128,7 +130,7 @@
     border-radius: .25rem;
 
     &.pl-alert-danger {
-      color: #721c24;
+      color: $color-red;
       background-color: #f8d7da;
       border-color: #f5c6cb;
     }
@@ -146,7 +148,7 @@
 
   .pl-input-mask {
     display: none;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: $color-semi-transparent;
     z-index: 100;
     top: 0;
     left: 0;
@@ -162,7 +164,7 @@
   .pl-spinner {
     position: fixed;
     z-index: 500;
-    background-color: rgba(255, 255, 255, 0.7);
+    background-color: $color-semi-transparent;
     display: none;
     justify-content: center;
     align-items: center;
@@ -179,8 +181,8 @@
       width: 100px;
       height: 100px;
       border: 3px solid transparent;
-      border-right-color: #2095F2;
-      border-left-color: #2095F2;
+      border-right-color: $color-blue;
+      border-left-color: $color-blue;
       border-radius: 50%;
       animation: pl-rotate 1s linear 0s infinite;
     }
@@ -193,7 +195,7 @@
     left: 0;
     right: 0;
     padding: 20px;
-    background-color: rgba(216, 216, 216, 0.8);
+    background-color: $color-little-transparent;
     z-index: 100;
     display: none;
     align-items: center;
@@ -205,8 +207,7 @@
 
 
     .pl-modal {
-      background: white;
-      color: #d5d5d5;
+      background: $color-white;
       display: flex;
       max-height: 100%;
       flex-flow: column;
@@ -224,12 +225,12 @@
         right: 19px;
         font-size: 3rem;
         font-weight: 600;
-        color: #2195F2;
+        color: $color-blue;
         cursor: pointer;
       }
 
       .pl-modal-title {
-        color: #7F7F7F;
+        color: $text-heading-color;
         font-size: 21px;
         font-weight: bold;
         line-height: 22px;
@@ -248,13 +249,28 @@
       .pl-modal-footer {
         display: flex;
         flex-direction: row;
-        border-top: 1px solid #F0F2F3;
+        border-top: 1px solid $border-color;
         padding: 20px 0;
 
         .pl-button + .pl-button {
           margin-left: 10px;
         }
       }
+    }
+  }
+
+  .pl-error {
+    input, select {
+      border: 2px solid $color-red !important;
+    }
+
+    label {
+      color: $color-red;
+    }
+
+    .pl-error-message {
+      margin: 8px 16px 0;
+      color: $color-red;
     }
   }
 }
